--- a/art-n-life-case-study.html
+++ b/art-n-life-case-study.html
@@ -48,22 +48,21 @@
                     <div class="col-md-8">
                         <div class="cah-left">
                             <h2>Arts & Life</h2>
-                            <p>Wahe Vibes, a holistic herbal tea brand, entrusted us with the creation of their Shopify website. Rooted in the founder Jitty's spiritual journey, we designed a platform that radiates tranquility and health through a harmonious blend of green and beige tones. The site is a gateway to a serene world, echoing the brand's commitment to well-being and Ayurveda.
-                            </p>
+                            <p> Reviving Tradition Through Marble Inlays</p>
                         </div>
                     </div>
                     <div class="col-md-4 d-flex justify-content-lg-end mt-3">
                         <div class="cah-right">
                             <p>Project </p>
                             <div class="tag-box">
-                                <div class="tag">Shopify website </div>
+                                <div class="tag">CREATIVE & BRANDING</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="case-video mt-3">
-                <video src="image/case-study/swm/case-hero.mp4" class="w-100" autoplay loop muted> </video>
+                <video src="image/case-study/art-n-life/1.mp4" class="w-100" autoplay loop muted> </video>
             </div>
         </section>
         <!-- Case Study Hero Section End -->
@@ -77,8 +76,9 @@
                     </div>
                     <div class="col-md-9">
                         <p>
-                            Wahe Vibes sought to create an online presence that reflected their dedication to holistic health and Ayurveda. Our task was to build a Shopify website that not only showcased their products but also communicated the founder's spiritual journey and the brand's serene ethos.
+                            Arts & Life revives tradition through marble inlay, crafting each piece with meticulous detail and creative flair. The brand blends heritage with innovation, preserving cultural narratives in timeless artworks.
                         </p>
+                        <p>This case study showcases Arts & Life's dedication to marble inlays, bridging past and present through exquisite craftsmanship and a profound respect for cultural heritage.</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="">
-                <img src="image/case-study/swm/case-hero-1.png" alt="" class="w-100">
+                <img src="image/case-study/art-n-life/g-1.png" alt="" class="w-100">
             </div>
         </section>
         <!-- Case Study brand Section End -->
@@ -106,7 +106,7 @@
                         <h3 class="m-md-0">Creating a Tranquil Online Experience</h3>
                     </div>
                     <div class="col-md-5 col-lg-4">
-                        <p class="m-md-0">We crafted a website that embodies the tranquillity and health ethos of Wahe Vibes. The design features a harmonious blend of green and beige tones, symbolising nature and calmness. The layout is intuitive, ensuring a seamless shopping experience while immersing visitors in the brand's serene world.
+                        <p class="m-md-0">We meticulously crafted Arts & Life's brand identity, starting with an elegant logo that embodies the intricate artistry of marble inlays. Our thoughtful selection of colors, typography, and collateral design harmoniously reflects the brand's commitment to preserving cultural heritage through every detail, ensuring a cohesive and compelling visual identity.
                         </p>
                     </div>
                 </div>
@@ -115,40 +115,13 @@
         <!-- Case Study Extra Images Section Start -->
         <section>
             <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-s.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-m.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-e.jpg" alt="" class="w-100"></div>
+                <div class="col-12 p-1"><img src="image/case-study/art-n-life/6.jpeg" alt="" class="w-100"></div>
+                <div class="col-md-6 p-1"><img src="image/case-study/art-n-life/4.jpeg" alt="" class="w-100"></div>
+                <div class="col-md-6 p-1"><img src="image/case-study/art-n-life/5.jpeg" alt="" class="w-100"></div>
             </div>
         </section>
         <!-- Case Study Extra Images Section End -->
 
-        <!-- Case Study Website Building Section Start -->
-        <section class="case-study-website">
-            <div class="container-xxl">
-                <div class="casw-text">
-                    <div class="row align-items-center">
-                        <div class="col-6 p-0">
-                            <div class="casw-text-left">
-                                <h4 class="m-0">Website Building</h4>
-                            </div>
-                        </div>
-                        <div class="col-6 p-0 d-flex justify-content-end">
-                            <div class="casw-text-right">
-                                <a href="https://spanishwithmrityunjay.in/" class="th-arrow-btn">
-                                    <span class="btn-text">View Project</span>
-                                    <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="casw-video my-4">
-                <video src="image/case-study/swm/case-hero-4.mp4" autoplay loop muted class="w-100"></video>
-            </div>
-        </section>
-        <!-- Case Study Website Building Section End -->
 
         <!-- Case Study Project Slider Section Start -->
         <section class="case-study-project">
