--- a/celebrations-by-anjili-case-study.html
+++ b/celebrations-by-anjili-case-study.html
@@ -77,10 +77,16 @@
                     </div>
                     <div class="col-md-9">
                         <p>
-                            The Celebration by Anjali Exhibition, a local-level lifestyle event held in Agra, experienced an exceptional surge in engagement and attendance, courtesy of our comprehensive marketing solutions. Our meticulously curated campaign generated unprecedented excitement and anticipation, culminating in a resounding success that set new industry standards. 
+                            The Celebration by Anjali Exhibition, a local-level lifestyle event held in Agra,
+                            experienced an exceptional surge in engagement and attendance, courtesy of our comprehensive
+                            marketing solutions. Our meticulously curated campaign generated unprecedented excitement
+                            and anticipation, culminating in a resounding success that set new industry standards.
                         </p>
                         <p>
-                            Encompassing a diverse range of services including marketing strategy, social media management, regional amplification, creative design, WhatsApp marketing, press releases, influencer coordination, OOH activation, lead generation, and website development, our efforts ensured meticulous planning and flawless execution throughout the event.
+                            Encompassing a diverse range of services including marketing strategy, social media
+                            management, regional amplification, creative design, WhatsApp marketing, press releases,
+                            influencer coordination, OOH activation, lead generation, and website development, our
+                            efforts ensured meticulous planning and flawless execution throughout the event.
                         </p>
                     </div>
                 </div>
@@ -99,13 +105,48 @@
             </div>
         </section>
         <!-- Case Study brand Section End -->
-         <!-- Case Study Extra Images Section Start -->
+        <!-- Case Study Extra Images Section Start -->
         <section>
             <div class="row p-0">
                 <div class="col-12 p-0"><img src="image/case-study/celebration/1.png" alt="" class="w-100"></div>
             </div>
         </section>
         <!-- Case Study Extra Images Section End -->
+
+        <!-- Case Study Website Building Section Start -->
+        <section class="case-study-website">
+            <div class="container-xxl">
+                <div class="casw-text">
+                    <div class="row align-items-center">
+                        <div class="col-6 p-0">
+                            <div class="casw-text-left">
+                                <h4 class="m-0">Website Building</h4>
+                            </div>
+                        </div>
+                        <div class="col-6 p-0 d-flex justify-content-end">
+                            <div class="casw-text-right">
+                                <a href="https://www.celebrationsbyanjalli.com/" target="_blank" class="th-arrow-btn">
+                                    <span class="btn-text">View Project</span>
+                                    <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="casw-video my-4">
+                <video src="image/case-study/celebration/2.mp4" autoplay loop muted class="w-100"></video>
+            </div>
+            <!-- <div class="container-xxl">
+        <div class="casw-text-bottom p-md-4">
+                <div class="text-center">
+                    <h3 class="m-md-0">A total of <b class="red">46,839</b> actions were taken which includes likes, comments, tap-links, saves, shares etc.
+                    </h3>
+            </div>
+        </div>
+    </div> -->
+        </section>
+        <!-- Case Study Website Building Section End -->
 
         <!-- Case Study Project Slider Section Start -->
         <section class="case-study-project">
@@ -116,17 +157,25 @@
                     </div>
                     <div class="col-sm-6 mb-sm-3 d-flex justify-content-sm-end">
                         <div class="">
-                            <a href="#" class="text-decoration-underline"><p>Go Back to Project</p></a>
+                            <a href="#" class="text-decoration-underline">
+                                <p>Go Back to Project</p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-12 p-0">
                         <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
                         </div>
                     </div>
                 </div>
@@ -165,7 +214,7 @@
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
     <script>
-        
+
     </script>
 </body>
 
