--- a/project.html
+++ b/project.html
@@ -333,10 +333,10 @@
 
                         </div>
                     </div>
-                    <div class="project-box" data-project-name="Spanish With Mrityunjay">
+                    <div class="project-box" data-project-name="ESMEE">
                         <div class="row">
                             <div class="col-lg-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-page/project-7.jpg" alt="" class="w-100"></div>
+                                <div class="pro-b-img"><img src="image/project-page/project-9.jpg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
@@ -345,19 +345,47 @@
                                         <div class="tag">Website & AR</div>
                                     </div>
                                     <div class="pro-title">
-                                        Spanish With Mrityunjay
+                                        ESMEE
                                     </div>
                                     <div class="pro-des">
-                                        <p> A Siele Certified Spanish teaching Institute</p>
+                                        <p> A D2C men’s footwear brand</p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="swm-case-study.html" class="th-arrow-btn">
+                                        <a href="esmee-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="project-box" data-project-name="Arts & Life">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-page/project-10.jpeg" alt="" class="w-100">
+                                </div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
+                                <div class="pro-b-text">
+                                    <div class="tag-box">
+                                        <div class="tag">Creative & Branding</div>
+                                    </div>
+                                    <div class="pro-title">
+                                        Arts & Life
+                                    </div>
+                                    <div class="pro-des">
+                                        <p>Reviving Tradition Through Marble Inlays</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="art-n-life-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -636,6 +664,35 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-box" data-project-name="MRW">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-page/project-8.png" alt="" class="w-100">
+                                </div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
+                                <div class="pro-b-text">
+                                    <!-- <div class="tag-box">
+                                        <div class="tag">Website & AR</div>
+                                        <div class="tag">Media Solutions</div>
+                                    </div> -->
+                                    <div class="pro-title">
+                                        M.R. Warerkar
+                                    </div>
+                                    <div class="pro-des">
+                                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="mrw-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
                 <div class="pt-content d-none" data-pt-con="creative-n-branding">
                     <div class="project-box" data-project-name="Dimple Collection">
@@ -725,6 +782,61 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-box" data-project-name="ESMEE">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right">
+                                <div class="pro-b-img"><img src="image/project-page/project-9.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-2">
+                                <div class="pro-b-text">
+                                    <!-- <div class="tag-box">
+                                        <div class="tag">Creative & Branding</div>
+                                        <div class="tag">Website & AR</div>
+                                    </div> -->
+                                    <div class="pro-title">
+                                        ESMEE
+                                    </div>
+                                    <div class="pro-des">
+                                        <p> A D2C men’s footwear brand</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="esmee-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-box" data-project-name="Arts & Life">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-page/project-10.jpeg" alt="" class="w-100">
+                                </div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
+                                <div class="pro-b-text">
+                                    <!-- <div class="tag-box">
+                                        <div class="tag">Creative & Branding</div>
+                                    </div> -->
+                                    <div class="pro-title">
+                                        Arts & Life
+                                    </div>
+                                    <div class="pro-des">
+                                        <p>Reviving Tradition Through Marble Inlays</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="art-n-life-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
                 <div class="pt-content d-none" data-pt-con="website-n-ar">
                     <div class="project-box" data-project-name="Spanish With Mrityunjay">
@@ -782,6 +894,62 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="project-box" data-project-name="ESMEE">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right">
+                                <div class="pro-b-img"><img src="image/project-page/project-9.jpg" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-2">
+                                <div class="pro-b-text">
+                                    <!-- <div class="tag-box">
+                                        <div class="tag">Creative & Branding</div>
+                                        <div class="tag">Website & AR</div>
+                                    </div> -->
+                                    <div class="pro-title">
+                                        ESMEE
+                                    </div>
+                                    <div class="pro-des">
+                                        <p> A D2C men’s footwear brand</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="esmee-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-box" data-project-name="MRW">
+                        <div class="row">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-page/project-8.png" alt="" class="w-100">
+                                </div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
+                                <div class="pro-b-text">
+                                    <!-- <div class="tag-box">
+                                        <div class="tag">Website & AR</div>
+                                        <div class="tag">Media Solutions</div>
+                                    </div> -->
+                                    <div class="pro-title">
+                                        M.R. Warerkar
+                                    </div>
+                                    <div class="pro-des">
+                                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                    <div class="pro-btn">
+                                        <a href="mrw-case-study.html" class="th-arrow-btn">
+                                            <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                            <span class="btn-text">Learn More</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
