--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
                     <a href="index.html"><img src="image/logo.png" alt="" class="w-100"></a>
                 </div>
             </div>
-            <div class="col-lg-6 my-3 nav-menu-container">
+            <div class="col-lg-6 my-3 nav-menu-container d-none d-lg-block">
                 <div class="nav-menu">
                     <ul class="m-0 p-0 list-unstyled">
                         <li class="nm-item" data-page="home-page"><a class="nm-link" href="index.html">Home</a></li>
@@ -19,19 +19,60 @@
                         <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nm-item">
-                            <a href="contact-us.html" data-page="contact-page" class="th-btn d-inline-block d-lg-none">contact us</a>
+                            <a href="contact-us.html" data-page="contact-page"
+                                class="th-btn d-inline-block d-lg-none">contact us</a>
                         </li>
                         <!-- <div class="nm-circle"></div> -->
                     </ul>
                 </div>
             </div>
             <div class="col-3 my-3 d-flex justify-content-end">
-                <a href="contact-us.html" data-page="contact-page" class="th-btn d-none d-lg-inline-block">contact us</a>
+                <a href="contact-us.html" data-page="contact-page" class="th-btn d-none d-lg-inline-block">contact
+                    us</a>
                 <div class="hamburger d-block d-lg-none" id="hamburger-6">
                     <span class="line"></span>
                     <span class="line"></span>
                     <span class="line"></span>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="header-close">
+    <div class="container-xxl">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-5 col-md-3 my-3 text-start">
+                <div class="nav-logo">
+                    <a href="index.html"><img src="image/logo.png" alt="" class="w-100"></a>
+                </div>
+            </div>
+            <div class="col-3 my-3 d-flex justify-content-end">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <div class="nav-menu-container">
+            <div class="nav-menu">
+                <ul class="m-0 p-0 list-unstyled">
+                    <li class="nm-item" data-page="home-page"><a class="nm-link" href="index.html">Home</a></li>
+                    <li class="nm-item" data-page="about-page"><a class="nm-link" href="about-us.html">About Us</a>
+                    </li>
+                    <li class="nm-item" data-page="service-page"><a class="nm-link" href="service.html">Services</a>
+                    </li>
+                    <li class="nm-item" data-page="project-page"><a class="nm-link" href="project.html">Projects</a>
+                    </li>
+                    <li class="nm-item" data-page="career-page"><a class="nm-link" href="careers.html">Careers</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="social-med py-4">
+            <h4>Social Media</h4>
+            <div class="tag-box mt-3">
+                <a href="#" class="tag">LinkedIn</a>
+                <a href="#" class="tag">Instagram</a>
+                <a href="#" class="tag">Behance</a>
+                <a href="#" class="tag">Facebook</a>
             </div>
         </div>
     </div>
@@ -46,15 +87,14 @@
             $("#header").removeClass("active");
         }
     })
-    $(".hamburger").click(function () {
-        $(this).toggleClass("is-active");
-        $('.nav-menu-container').toggleClass("active");
+    $(".hamburger,.header-close .fa-times").click(function () {
+        $('.header-close').toggleClass("active");
     });
     var pageValue = $('body').attr('id');
-    if(pageValue == "sub-service-page"){
+    if (pageValue == "sub-service-page") {
         pageValue = 'service-page'
     }
-    if(pageValue == "case-study-pages"){
+    if (pageValue == "case-study-pages") {
         pageValue = 'project-page'
     }
     $('[data-page="' + pageValue + '"]').addClass('active');
