--- a/header.html
+++ b/header.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div class="header-close">
+<div class="header-close d-block d-lg-none">
     <div class="container-xxl">
         <div class="row justify-content-between align-items-center">
             <div class="col-5 col-md-3 my-3 text-start">
